alignment issues AGAIN!!!

--- a/css/style.css
+++ b/css/style.css
@@ -533,7 +533,7 @@ img.lotus{
   }
 
   .section1 .rightside p{
-    margin-left: 20px;
+    margin-left: 0px;
   }
 
   .section1 .rightside video{
